--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "underscore": "~1.5.2",
     "request": "~2.44.0",
-    "requestsync": "~0.2.0"
+    "requestsync": "brockwood/requestsync#0.8"
   },
   "devDependencies": {
     "coffee-script": "~1.6.3",
